# 8-Puzzle-Challenge-IDS

./: README.md  main.py  pyproject.toml
src/eight_puzzle/core/: puzzle.py  state.py
src/eight_puzzle/gui/: app.py
src/eight_puzzle/search/: __init__.py  ids.py
